Finish Results (View) Section & Single Task with Done button js just

--- a/index.html
+++ b/index.html
@@ -66,7 +66,47 @@
             </section>
             <!-- End Add Tasks Section -->
 
+            <!-- Start View Section -->
+            <section class="view-sec">
+                <!-- Tasks info -->
+                <div class="tasks-info">
+                    <h4 class="sec-title">Tasks Completed</h4>
+                    <p class="nums"><span class="value completed">2</span> <span class="from">from</span> <span class="value all-tasks">5</span></p>
+                </div>
 
+                <!-- Tasks List -->
+                <ul class="tasks-list">
+                    <li class="single-task">
+                        <!-- Done Button -->
+                        <button class="done-btn">
+                            <span class="not-done-icon ri-checkbox-blank-circle-line"></span>
+                            <span class="done-icon ri-checkbox-circle-line"></span>
+                        </button>
+                        <!-- Tasks Details -->
+                        <div class="task-details">
+                            <p class="task-name">Record AWD Lecture</p>
+                            <div class="day-time">
+                                <p class="day">
+                                    <span class="ri-calendar-line icon"></span>
+                                    <span class="value day">28-1-2022</span>
+                                </p>
+                                <p class="time">
+                                    <span class="ri-time-line icon"></span>
+                                    <span class="value day">09:00 AM</span>
+                                </p>
+                            </div>
+                        </div>
+                        <!-- Edit & Delete Button -->
+                        <button class="edit-btn">
+                            <span class="trash-icon ri-pencil-line"></span>
+                        </button>
+                        <button class="trash-btn">
+                            <span class="trash-icon ri-delete-bin-6-line"></span>
+                        </button>
+                    </li>
+                </ul>
+            </section>
+            <!-- End View Section -->
         </main>
         <!-- End Page Main -->
     </div>
