--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do App | Karam</title>
+    <title>To Do App | BY: Karam</title>
+    <link rel="shortcut icon" href="img/karam-logo.svg" type="image/x-icon">
 
     <!-- Calling Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,14 +69,14 @@
 
             <!-- Start View Section -->
             <section class="view-sec">
-                <!-- Tasks info -->
-                <div class="tasks-info">
-                    <h4 class="sec-title">Tasks Completed</h4>
-                    <p class="nums"><span class="value completed">2</span> <span class="from">from</span> <span class="value all-tasks">5</span></p>
-                </div>
-
+                
                 <!-- Tasks List -->
-                <ul class="tasks-list">
+                <ul class="tasks-list" style="display: none;">
+                    <!-- Tasks info -->
+                    <div class="tasks-info">
+                        <h4 class="sec-title">Tasks Completed</h4>
+                        <p class="nums"><span class="value completed">2</span> <span class="from">from</span> <span class="value all-tasks">5</span></p>
+                    </div>
                     <li class="single-task">
                         <!-- Done Button -->
                         <button class="done-btn">
@@ -105,6 +106,13 @@
                         </button>
                     </li>
                 </ul>
+
+                <div class="no-item">
+                    <div class="image-div">
+                        <img src="img/no-item.svg" alt="no-item">
+                    </div>
+                    <h4 class="title">Add a New Task</h4>
+                </div>
             </section>
             <!-- End View Section -->
         </main>
