add the table of content

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section class="view-sec">
                 
                 <!-- Tasks List -->
-                <ul class="tasks-list" style="display: none;">
+                <ul class="tasks-list">
                     <!-- Tasks info -->
                     <div class="tasks-info">
                         <h4 class="sec-title">Tasks Completed</h4>
