Add Task is Finished

--- a/index.html
+++ b/index.html
@@ -100,19 +100,18 @@
             <section class="view-sec">
                 
                 <!-- Tasks List -->
-                <ul class="tasks-list">
+                <div class="tasks-div">
                     <!-- Tasks info -->
                     <div class="tasks-info">
                         <h4 class="sec-title">Tasks Completed</h4>
                         <p class="nums"><span class="value completed">2</span> <span class="from">from</span> <span class="value all-tasks">5</span></p>
                     </div>
-                    <li class="single-task">
-                        <!-- Done Button -->
+                    <ul class="tasks-list">
+                        <!-- <li class="single-task">
                         <button class="done-btn">
                             <span class="not-done-icon ri-checkbox-blank-circle-line icon"></span>
                             <span class="done-icon ri-checkbox-circle-line icon"></span>
                         </button>
-                        <!-- Tasks Details -->
                         <div class="task-details">
                             <p class="task-name">Record AWD Lecture</p>
                             <div class="day-time">
@@ -126,15 +125,15 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- Edit & Delete Button -->
                         <button class="edit-btn" data-id="edit">
                             <span class="trash-icon ri-pencil-line icon"></span>
                         </button>
                         <button class="trash-btn" data-id="delete">
                             <span class="trash-icon ri-delete-bin-6-line icon"></span>
                         </button>
-                    </li>
-                </ul>
+                    </li> -->
+                    </ul>
+                </div>
 
                 <div class="no-item">
                     <div class="image-div">
