--- a/index.html
+++ b/index.html
@@ -107,31 +107,7 @@
                         <p class="nums"><span class="value completed">2</span> <span class="from">from</span> <span class="value all-tasks">5</span></p>
                     </div>
                     <ul class="tasks-list">
-                        <!-- <li class="single-task">
-                        <button class="done-btn">
-                            <span class="not-done-icon ri-checkbox-blank-circle-line icon"></span>
-                            <span class="done-icon ri-checkbox-circle-line icon"></span>
-                        </button>
-                        <div class="task-details">
-                            <p class="task-name">Record AWD Lecture</p>
-                            <div class="day-time">
-                                <p class="day">
-                                    <span class="ri-calendar-line icon"></span>
-                                    <span class="value day">28-1-2022</span>
-                                </p>
-                                <p class="time">
-                                    <span class="ri-time-line icon"></span>
-                                    <span class="value day">09:00 AM</span>
-                                </p>
-                            </div>
-                        </div>
-                        <button class="edit-btn" data-id="edit">
-                            <span class="trash-icon ri-pencil-line icon"></span>
-                        </button>
-                        <button class="trash-btn" data-id="delete">
-                            <span class="trash-icon ri-delete-bin-6-line icon"></span>
-                        </button>
-                    </li> -->
+                        <!-- Single Task -->
                     </ul>
                 </div>
 
