--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     
     <!-- Calling CSS Files -->
-    <link rel="stylesheet" href="css/remixicon.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
